--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -16,8 +16,9 @@
 
 // --- Settings ---
 // import your own `settings` here or
+@import './settings.scss';
 // import and modify the default settings through
-// @import 'settings/settings';
+//@import '../../node_modules/foundation-sites/scss/settings/settings';
 
 // --- Components ---
 // Utilities
